objects/Software_Download__c.object
<CustomObject>
    <fields>
        <fullName>Build_Number__c</fullName>
        <label>Build Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CD_DVD_Name__c</fullName>
        <formula>Product_Component__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CD/DVD Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contolled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will indicate whether a software download record is controlled or not.</description>
        <inlineHelpText>This field will indicate whether a software download record is controlled or not.</inlineHelpText>
        <label>Under Shipping Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Download_Type__c</fullName>
        <description>This field will track the types of downloads available.</description>
        <inlineHelpText>This field will track the types of downloads available.</inlineHelpText>
        <label>Download Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>Installation Package</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>This field will track the expiration date of the download.</description>
        <inlineHelpText>This field will track the expiration date of the download.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>File_Date__c</fullName>
        <label>File Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Size_KBs__c</fullName>
        <description>This field will display the size of this download in kbs.</description>
        <inlineHelpText>This field will display the size of this download in kbs.</inlineHelpText>
        <label>File Size (KB)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>File_Type__c</fullName>
        <description>This field will contain the types of files that will be available for download.</description>
        <inlineHelpText>The type of the file to be downloaded.</inlineHelpText>
        <label>File Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>gz</fullName>
                </value>
                <value>
                    <fullName>zip</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_URL__c</fullName>
        <label>Download</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IP_Location__c</fullName>
        <label>IP Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>IP Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Image_Type__c</fullName>
        <description>This field will identify the type of image used in the CD/DVD.</description>
        <inlineHelpText>This field will identify the type of image used in the CD/DVD.</inlineHelpText>
        <label>Image Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fileset</fullName>
                </value>
                <value>
                    <fullName>ISO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <description>This field will track the internal notes of the download.</description>
        <inlineHelpText>This field will track the internal notes of the download.</inlineHelpText>
        <label>Internal Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Latest_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will indicate whether the download is the most recent version or not.</description>
        <inlineHelpText>This field will indicate whether the download is the most recent version or not.</inlineHelpText>
        <label>Is Latest Version?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Localization__c</fullName>
        <description>This field will track the language for this download.</description>
        <inlineHelpText>This field will track the language for this download.</inlineHelpText>
        <label>Language</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Release__c</fullName>
        <label>Major Release</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_Systam__c</fullName>
        <label>O/S</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will track the component to which this download is linked to.</description>
        <inlineHelpText>This field will track the component to which this download is linked to.</inlineHelpText>
        <label>Component or CD Name</label>
        <referenceTo>Support_Product__c</referenceTo>
        <relationshipName>Software_Downloads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <formula>Product__r.Parent_Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will track the product to which this download is linked to.</description>
        <inlineHelpText>This field will track the product to which this download is linked to.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Support_Product__c</referenceTo>
        <relationshipName>Software_Downloads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publish_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release_Type__c</fullName>
        <label>Release Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hot Fix</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Siebel_ID__c</fullName>
        <externalId>true</externalId>
        <label>Siebel ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Support_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Software_Downloads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TruncatedComponentName__c</fullName>
        <formula>Product_Component__r.Name</formula>
        <label>Component</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Software Download</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Component__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Product__c</columns>
        <columns>Major_Release__c</columns>
        <columns>Version__c</columns>
        <columns>Build_Number__c</columns>
        <columns>Operating_Systam__c</columns>
        <columns>Localization__c</columns>
        <columns>Download_Type__c</columns>
        <columns>Publish_Date__c</columns>
        <columns>Contolled__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Software Downloads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>